# critdd

./: .gitignore  LICENSE.md  README.md  api.html  critdd.html  critdd.tests.html  developer-guide.html  genindex.html  index.html  manual.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml
_sources/: api.md.txt  critdd.rst.txt  critdd.tests.rst.txt  developer-guide.md.txt  index.md.txt  manual.md.txt  modules.rst.txt
critdd/: __init__.py  diagram.py  friedman.py  stats.py  tikz.py  tikz_2d.py
critdd/tests/: __init__.py  readme.py  stats.py  tikz.py  two_d.py
docs/: .gitignore
docs/source/: 2d_example.csv  api.md  conf.py  index.md
